main.js updated to account for resetting elements. Menu buttons style:hover implemented. main.css .body: overflow:hidden appended. Reset button repaired. Load buttons no longer reload if game already dealt.

--- a/freecell.css
+++ b/freecell.css
@@ -36,7 +36,6 @@
     position: relative;
     min-height: 500px;
     width: 100px;
-    background-color: beige;
 }
 
 .card {
